Update code css dan fix code html, js, dan python

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,17 @@
-FROM node:18
+FROM python:3.10-slim
+
+# Set workdir
 WORKDIR /app
-COPY package*.json ./
-RUN npm install
+
+# Copy requirements & install dependencies
+COPY requirements.txt ./
+RUN pip install --no-cache-dir -r requirements.txt
+
+# Copy seluruh source code ke container
 COPY . .
+
+# Expose port 5000 (sama seperti yang digunakan Flask)
 EXPOSE 5000
-CMD ["npm", "start"]
+
+# Jalankan aplikasi menggunakan socketio + eventlet
+CMD ["python", "app.py"]
