--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: '3'
+
 services:
   backend:
     build: ./backend
@@ -7,6 +9,6 @@ services:
   frontend:
     build: ./frontend
     ports:
-      - "3000:3000"
+      - "3000:80"  # NGINX serves HTML on port 80 inside the container
     depends_on:
       - backend
