Update code, coba cek dulu

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,17 +1,17 @@
 FROM python:3.10-slim
 
-# Set workdir
+# Set working directory inside the container
 WORKDIR /app
 
-# Copy requirements & install dependencies
-COPY requirements.txt ./
+# Copy dependencies and install them
+COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy seluruh source code ke container
+# Copy the application source code
 COPY . .
 
-# Expose port 5000 (sama seperti yang digunakan Flask)
+# Expose the port Flask app will run on
 EXPOSE 5000
 
-# Jalankan aplikasi menggunakan socketio + eventlet
+# Run the Flask-SocketIO app with eventlet
 CMD ["python", "app.py"]
